# MorphemeConnect

./: .gitignore  MorphemeConnect.sln  README.md
MorphemeConnect/: extern.h  (+7 more)
src/MorphemeConnect/MorphemeConnect/cfromreader/: CMakeLists.txt  CMakeSettings.json  README.md  cfr.hpp  notes.md
src/MorphemeConnect/MorphemeConnect/cfromreader/binders/: binder.h  binders.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/binders/bdf/: README.md  bdf3.cpp  bdf3.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/binders/bhd/: README.md  bhd5_1.cpp  bhd5_1.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/binders/bhf/: README.md
src/MorphemeConnect/MorphemeConnect/cfromreader/binders/bnd/: bnd3.cpp  bnd3.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/binders/dcx/: dcx.cpp  dcx.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/common/: stdafx.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/docs/setup/: building-on-windows.md
src/MorphemeConnect/MorphemeConnect/cfromreader/formats/: formats.hpp  stdafx.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/formats/flver/: flver2.cpp  flver2.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/formats/havok/: havok.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/formats/msb/: msb.hpp  msb_com.hpp  stdafx.hpp
src/MorphemeConnect/MorphemeConnect/cfromreader/formats/paramdef/: paramdef.cpp  paramdef.h
src/MorphemeConnect/MorphemeConnect/cfromreader/res/file_lists/: README.md
src/MorphemeConnect/MorphemeConnect/cfromreader/util/: README.md  filetypes.cpp  filetypes.hpp  stdafx.hpp  util.hpp
(+441 files in other folders)
